--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static "vendor/select2/dist/css/select2.min.css" %}"/>
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
-    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+    <!-- <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script> -->
 
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
     <script>unlockMaps()</script>
