--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -2,9 +2,9 @@
 {% load i18n static %}
 
 {% block head %}
-<script src="{% static "js/legacy/vendor/jquery.formset.custom.js"  %}" type="text/javascript" charset="utf-8"></script>
-<script src="{% static "js/legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
-<script src="{% static "js/legacy/js/script.js" %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static "legacy/vendor/jquery.formset.custom.js"  %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static "legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
+<script src="{% static "legacy/js/script.js" %}" type="text/javascript" charset="utf-8"></script>
 {% endblock %}
 {% block body_class %}get-the-detail{% endblock %}
 
