--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -27,7 +27,7 @@
 {% block breadcrumb %}
     <ul class="breadcrumb">
         <li><a href="/editor">{% trans "Editor" %}</a> <span class="divider"></span></li>
-        <li><a href="/en/global/add/">{% trans "Add a deal" %}</a> <span class="divider"></span></li>
+        <li><a href="/deal/add/">{% trans "Add a deal" %}</a> <span class="divider"></span></li>
     </ul>
 {% endblock %}
 
