--- a/map/templates/map/map.html
+++ b/map/templates/map/map.html
@@ -46,7 +46,7 @@
     </script>
 
     <div id="popup" class="ol-popup">
-        <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+        <a href="#" id="popup-closer" class="noul ol-popup-closer"></a>
         <div id="popup-content"></div>
     </div>
 
