--- a/templates/start_mock.html
+++ b/templates/start_mock.html
@@ -229,7 +229,7 @@
         </div>
     </div>
 </div>
-<div class="container">"
+<div class="container">
     <div class="row">
         <div class="col-md-12 center">
             <h3>Our Partners</h3>
