Stakeholderform css fixed
Former-commit-id: 8e912278b5293bd65fefa78e56d485a2cf5eb086

--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -661,9 +661,11 @@ p a {
     right: 12px;
     position: absolute;
 }
-
-.investorfield .select2-main {
-    width: 50vw !important;
+.controls .select2,
+.controls .django-select2,
+.controls .select2-container,
+.controls .select2-main {
+    width: 95% !important;
 }
 
 .dropdown-menu>.active>a,
