--- a/grid/templates/add-deal.html
+++ b/grid/templates/add-deal.html
@@ -10,10 +10,10 @@
     {# map #}
     <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
-    <link rel="stylesheet" href="{% static "vendor/select2/dist/css/select2.min.css" %}"/>
+    <!-- <link rel="stylesheet" href="{% static "vendor/select2/dist/css/select2.min.css" %}"/> -->
 
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
-    <!-- <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script> -->
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
 
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
     <script>unlockMaps()</script>
@@ -26,8 +26,8 @@
 
 {% block breadcrumb %}
     <ul class="breadcrumb">
-        <li><a href="/editor">{% trans "Editor" %}</a> <span class="divider"></span></li>
-        <li><a href="/deal/add/">{% trans "Add a deal" %}</a> <span class="divider"></span></li>
+        <li><a href="/editor">{% trans "Editor" %}</a></li>
+        <li><a href="/deal/add/">{% trans "Add a deal" %}</a></li>
     </ul>
 {% endblock %}
 
@@ -42,7 +42,7 @@
 
         </div>
 
-        <input type="submit" value="Submit"/>
+        <input type="submit" value="{% trans 'Submit' %}"/>
 
     </form>
 
