--- a/grid/templates/stakeholder.html
+++ b/grid/templates/stakeholder.html
@@ -8,13 +8,10 @@
 {% endblock %}
 {% block navutils %}
 {% endblock %}
-{% block page_title %}Add / edit Operational stakeholder{% endblock %}
-{% block title %}Add / edit Operational stakeholder{% endblock %}
+{% block page_title %}{% trans "Add / edit Operational stakeholder" %}{% endblock %}
+{% block title %}{% trans "Add / edit Operational stakeholder" %}{% endblock %}
 
 {% block content %}
-    <!-- Foo -->
-    {{ investor_form.media.js }}
-
     <div class="popup">
         <form action="." method="post" enctype="multipart/form-data">
             {% csrf_token %}
@@ -30,14 +27,7 @@
                     <td><h3>Investors</h3></td>
                 </tr>
                 {{ parent_investors }}
-<!--
-                <select class="investorfield">
-                    <option value="5">Investor One</option>
-                    <option value="23">Investor Two</option>
-                    <option value="512">Investor Three</option>
-                    <option value="32348">Investor Four</option>
-                </select>
--->
+
                 <tr>
                     <td><input type="submit" value="Submit"/></td>
                 </tr>
