Evil django-select2 is evil - and now kicked out here.

--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -32,7 +32,7 @@
         </script>
 
         {# include django_select2 JS; must be done in form loop because it's a property of form.media #}
-        {{ form.media.js }}
+        {# { form.media.js } #}
 
 
     {% endfor %}
